[package]
name = "artwrap"
version = "0.1.0"
authors = ["Martin Kolařík <martin.kolarik@smartcontrol.cz>"]
edition = "2021"

[dependencies]
async-channel = "^2.2"
futures-lite = { version = "^2.2", default-features = false }
pin-project-lite = "^0.2"

[target.'cfg(not(target_os = "unknown"))'.dependencies]
async-global-executor = { version = "^2.4", default-features = false }
async-io = { version = "^2.3" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = { version = "^0.4" }
gloo-timers = { version = "^0.3", features = ["futures"] }
