[package]
name = "artwrap"
version = "0.2.1"
authors = ["Martin Kolařík <martin.kolarik@smartcontrol.cz>"]
description = "Minimal asynchronous smol/wasm wrapper for unified accessing selected primitives."
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/martin-kolarik/artwrap"
homepage = "https://github.com/martin-kolarik/artwrap"

[dependencies]
async-channel = "^2.2"
pin-project-lite = "^0.2"

[target.'cfg(not(target_os = "unknown"))'.dependencies]
async-global-executor = { version = "^3.1", default-features = false, features = [
    "async-io",
] }
async-io = { version = "^2.4" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = { version = "^0.4" }
gloo-timers = { version = "^0.3", features = ["futures"] }
