[package]
name = "artwrap"
version = "0.3.3"
authors = ["Martin Kolařík <martin.kolarik@smartcontrol.cz>"]
description = "Minimal asynchronous smol/wasm wrapper for unified accessing selected primitives."
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/martin-kolarik/artwrap"
homepage = "https://github.com/martin-kolarik/artwrap"

[dependencies]
async-channel = "^2.5"
pin-project-lite = "^0.2"

[target.'cfg(not(target_os = "unknown"))'.dependencies]
async-executor = { version = "^1.14" }
async-io = { version = "^2.5" }
blocking = { version = "^1.6" }
dashmap = { version = "^6.1" }
event-listener = { version = "^5.4" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = { version = "^0.4" }
gloo-timers = { version = "^0.4", features = ["futures"] }
